# ScrapDesigner

./: CMakeLists.txt
images/: images.qrc
src/: GateHandleMap.hpp  GateHandles.cpp  GateHandles.hpp  GraphicsGate.cpp  GraphicsGate.hpp  GraphicsScene.cpp  GraphicsScene.hpp  GraphicsSvgButton.cpp  GraphicsSvgButton.hpp  GraphicsView.cpp  GraphicsView.hpp  main.cpp
